--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -70,7 +70,6 @@
     padding: 40px 16px;
   }
   .news-card-list__container {
-    flex-wrap: nowrap;
     gap: 8px;
   }
   .news-card-list__title {
